issue #3 set correct option and hide visibility as visibility options will not be modified and user need not set this option

--- a/app/assets/stylesheets/data2paper.scss
+++ b/app/assets/stylesheets/data2paper.scss
@@ -27,3 +27,8 @@ form .field-wrapper label[required="required"]::after {
   margin-bottom: 1em;
 }
 
+/* Hide visibility options from form */
+.set-access-controls.list-group-item {
+  display: none;
+}
+
